--- a/css/main.css
+++ b/css/main.css
@@ -164,13 +164,13 @@ img {
   margin-top: -25px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
-  width: 100%;
+  width: 80%;
   border-radius: 50%;
   margin-left: -50%;
   display: inline-block;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+  -webkit-box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0 0 0px rgba(0, 0, 0, 0);
 }
 .navbar-custom .avatar-container  .avatar-img {
   width: 100%;
