--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* --- General --- */
 
 body {
-  font-family: 'PT Sans Narrow', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 18px;
   color: #404040;
   position: relative;
