--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* --- General --- */
 
 body {
-  font-family: 'Alegreya', 'Lora', serif;
+  font-family: 'EB Garamond', 'Lora', serif;
   font-size: 22px;
   color: #404040;
   position: relative;
