--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
 /* --- General --- */
 
 body {
-  font-family: 'EB Garamond', 'Lora', serif;
-  font-size: 22px;
+  font-family: 'Ubuntu', 'Lato', serif;
+  font-size: 20px;
   color: #404040;
   position: relative;
   background: #FFF;
