--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* --- General --- */
 
 body {
-  font-family: 'Ubuntu', 'Lato', serif;
+  font-family: 'Lato', 'Open Sans', 'Ubuntu', serif;
   font-size: 20px;
   color: #404040;
   position: relative;
